--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Skranji&display=swap");
-
+@import url("https://th.bing.com/th/id/OIP.YtDlFUwsas8immSsLrncqgHaH0?w=208&h=219&c=7&r=0&o=5&pid=1.7");
+@import url("https://i2.wp.com/elrincon.tv/wp-content/uploads/2014/04/Faruq-Personajes-de-El-Pr%C3%ADncipe.jpg?fit=789%2C457&ssl=1");
 h2 {
   font-size: 30px;
   font-family: "Skranji", cursive;
